Fix: Toolbar no longer wraps if off-screen Fix: Add buttons are now correctly sized

--- a/src/css/contentStyle.css
+++ b/src/css/contentStyle.css
@@ -160,6 +160,7 @@
 	border-radius: 10px;
 	z-index: 100;
 	line-height: 0;
+	white-space: nowrap
 }
 .helpertoolbar .colorbutton {
 	width: 30px;
@@ -315,6 +316,7 @@
 	border-radius: 0px 10px 10px 0px;
 	height: 100%;
 	padding: 5px;
+	line-height: 0px;
 }
 #sidebarView .addTaskDiv{
 	cursor: pointer;
